--- a/client/footer.html
+++ b/client/footer.html
@@ -3,7 +3,7 @@
 	<div class="navbar navbar-fixed-bottom">
 		<div class="navbar-inner footer">
     <p class="navbar-text">
-        2013 Get It Done Like A.Pro by Łukasz "gozda" Gandecki <span class="font-grey-4">|</span> <a href="#">Contact</a> <span class="font-grey-4">|</span> <a href="#">About</a>
+        2013 Get It Done Like A.Pro by Łukasz "gozda" Gandecki <span class="font-grey-4">|</span> contact me at: lgandecki AT thebrain DOT pro
     </p>
 </div>
 </div>
