--- a/client/stranger/welcomeStranger.html
+++ b/client/stranger/welcomeStranger.html
@@ -4,8 +4,10 @@
 		<div class="firstStrangerLog">
 			<div class="text-center">
 				<h2>Hello, stranger!</h2>
+				<p class="lead"><strong>Do you often find yourself in a situation</strong><br/> in which you try to learn, create, work<br/>but end up, a couple hours later,</br> with a realization that <br/><strong>you have not really done anything</strong>?</p>
+
 				<p class="lead">
-					 Do you want to be a little more productive today? <br/><strong>Great!</strong><br/> Let me help you.
+					 Do you want to be a little more productive today? <br/><strong>Great!</strong><br/> Let me introduce you to my variation of<br/> <a href="http://en.wikipedia.org/wiki/Pomodoro_Technique">"pomodoro technique"</a>.
 				</p>
 				<p class="lead">
 					 Here is the thing.<br/>
@@ -117,18 +119,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="timer" style="display: none">
-			<div style="color:#EEE;height:520px;width:100%">
-				<div style="position:relative;width:500px;margin:auto">
-					<div style="position:absolute;left:10px;top:10px">
-						<input class="knob minute" data-min="0" data-max="25" data-bgcolor="#ddd" data-fgcolor="#244AA3" data-width="500" data-height="500" data-thickness=".3" data-readonly="true">
-					</div>
-					<div style="position:absolute;left:110px;top:110px">
-						<input class="knob second" data-min="0" data-max="60" data-bgcolor="#ddd" data-displayinput=true data-width="300" data-height="300" data-thickness=".45" data-fgcolor="#3B4B70" data-readonly="true">
-					</div>
-				</div>
-			</div>
-		</div>
+		{{>timer}}
 		<div class="secondStrangerLog" style="display: none;">
 			
 				<div class="text-center">
@@ -144,7 +135,7 @@
 				  <p class="lead"> When you feel ready, click "start" again.</p>
 
 			<p class="lead">
-				Tasks from your previous log
+				Here are the planned tasks from your previous log
 			</p>
 			<div class="row-fluid">
 				<ul class="pull-left text-left">
@@ -273,20 +264,8 @@
 		</div>
 		</div>
 	</div>
-	<div class="span8 center program hero-unit">
-		<blockquote>
-			<small><strong>Stephen King</strong> once said: </small>
-			<p class="lead text-center">
-				 When asked,<br/><strong>"How do you write?"</strong><br/>I invariably answer<br/><strong>"One word at a time"</strong><br/> and the answer is invariably dismissed.
-			</p>
-			<p class="lead text-center">
-				 But.<br>
-				<strong>That is all it is.</strong><br/>It sounds too simple to be true.<br/><strong>But consider the Great Wall of China</strong>,<br/> if you will:<br/><br/><strong>One stone at a time, man.</strong><br/>That's all. <br/><strong>One stone at a time.</strong>
-				<p class="lead text-center">
-					 But I've read <br/></br><strong>You can see that motherfucker <br/>from space<br/> without a telescope.</strong>
-				</p>
-			</blockquote>
-		</div>
+	{{> stephenKingQuote }}
+
 	</div>
-</div>
+
 </template>
